# md2docx

./: .gitignore  CHANGELOG.md  README.md  md2docx.py  pyproject.toml  test_md2docx.py
src/md2docx/: __init__.py  __main__.py  converter.py
tests/: __init__.py  test_md2docx.py
