[project]
name = "md2docx"
version = "1.1.3"
description = "Professional Markdown to Word (DOCX) converter with advanced formatting capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Alain Boisvert"}
]
keywords = ["markdown", "docx", "word", "converter", "pandoc", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business",
]

dependencies = [
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
md2docx = "md2docx.__main__:main"

[project.urls]
Homepage = "https://github.com/boisalai/md2docx"
Repository = "https://github.com/boisalai/md2docx"
Issues = "https://github.com/boisalai/md2docx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2docx"]
